Perkin-UAT/force-app/main/default/objects/INF_Bugs_Suggestions__c/INF_Bugs_Suggestions__c.object-meta.xml
<CustomObject>
    <label>Bugs &amp; Suggestions</label>
    <nameField>
        <displayFormat>B-{00000000}</displayFormat>
        <label>Bug Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bugs &amp; Suggestions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>