Perkin-UAT/force-app/main/default/objects/INF_Bugs_Suggestions__c/fields/Bug__c.field-meta.xml
<CustomField>
    <fullName>Bug__c</fullName>
    <label>Bug</label>
    <length>255</length>
    <type>Text</type>
</CustomField>