Perkin-UAT/force-app/main/default/objects/INF_Bugs_Suggestions__c/fields/INF_Bug_Number__c.field-meta.xml
<CustomField>
    <fullName>INF_Bug_Number__c</fullName>
    <label>Bug#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>