Perkin-UAT/force-app/main/default/objects/INF_Bugs_Suggestions__c/fields/INF_Case__c.field-meta.xml
<CustomField>
    <fullName>INF_Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Bugs &amp; Suggestions</relationshipLabel>
    <relationshipName>Bugs_Suggestions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>