Perkin-UAT/force-app/main/default/objects/INF_Bugs_Suggestions__c/fields/INF_Title__c.field-meta.xml
<CustomField>
    <fullName>INF_Title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>