Perkin-UAT/force-app/main/default/objects/INF_Bugs_Suggestions__c/fields/INF_Type__c.field-meta.xml
<CustomField>
    <fullName>INF_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bug</fullName>
                <default>true</default>
                <label>Bug</label>
            </value>
            <value>
                <fullName>Suggestion</fullName>
            </value>
            <value>
                <fullName>Tibco Bug</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>